force-app/main/default/objects/rh2__PS_Filter_Audit_History__c/rh2__PS_Filter_Audit_History__c.object-meta.xml
<CustomObject>
    <description>Tracks individual field history on HS Filter</description>
    <label>Filter Audit History</label>
    <nameField>
        <label>Filter Audit History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Audit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>