force-app/main/default/objects/rh2__PS_Filter_Audit_History__c/fields/rh2__Field__c.field-meta.xml
<CustomField>
    <fullName>rh2__Field__c</fullName>
    <description>The field being updated</description>
    <inlineHelpText>The field being updated</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>