force-app/main/default/objects/rh2__PS_Filter_Audit_History__c/fields/rh2__Filter_Audit__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>rh2__PS_Filter_Audit__c</referenceTo>
    <relationshipLabel>Filter Audit History</relationshipLabel>
    <relationshipName>PS_Filter_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>