force-app/main/default/objects/rh2__PS_Filter_Audit_History__c/fields/rh2__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>rh2__Old_Value__c</fullName>
    <description>The old value of the updated field</description>
    <inlineHelpText>The old value of the updated field</inlineHelpText>
    <label>Old Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>